--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,6 @@
 DB_URL=mongodb://<user>:<db_password>@<cluster>
 FRONTEND_URL=http://localhost:5173
-
+SMTP_HOST=gmail.com
+SMTP_PORT=1234
+SMTP_USER=root
+SMTP_PASS=root
